# 8bit_playground

c64/: 6502-c64-cc65.cmake  6502-c64-vasm.cmake  CMakeLists.txt  Makefile  border_flash.asm  c64.ld
c64/border_flash/: CMakeLists.txt  basic_entry.asm  border_flash.asm  border_flash.s
c64/border_flash_c/: CMakeLists.txt  border_flash.c
c64/hello_world/: CMakeLists.txt  main.c
cx16/: 65C02-cx16-cc65.cmake  CMakeLists.txt
cx16/cmake/Compiler/: CC65-C.cmake  CC65-CX16-ASM.cmake
cx16/cmake/Platform/: CommanderX16-CC65-C.cmake  CommanderX16.cmake
cx16/hello_world/: CMakeLists.txt  hello_world.c  hello_world_a.asm
